## Create a static library for the App module
#add_library(Logic STATIC )
#
## Specify include directories for this library
#target_include_directories(Logic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#
## If AppLib depends on other libraries, link them here
## target_link_libraries(AppLib PRIVATE OtherLib)